# Teyvat-Guide

./: LICENSE  README.md  setup.cfg
tests/: main_test.py
teyvat_guide/: __main__.py  calculator.py  client.py  daily_reward.py  main.py
