[metadata]
name = teyvat_guide
version = 0.0.0
description = Telegram bot (Genshin)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AJai13/teyvat_guide
author = Adam
author_email = aj_mz@hotmail.com
license = MIT License
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
install_requires =
    python-telegram-bot==13.14
    genshin[all]

python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
[options.entry_points]
console_scripts =
    teyvat_guide = teyvat_guide.main:main

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
source = teyvat_guide

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-tests.*]
disallow_untyped_defs = false
ignore_errors = true
